# BiC-MPPI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
BARN_dataset/: npy_to_txt.py
example/: main.cpp
example/model/: car_parking.h  cartpole.h  model_base.h
model/: bi_wmrobot_map.h  invpend.h  model_base.h  quadrotor.h  wmrobot_map.h
mppi/: bi_mppi.h  bi_mppi_wholedistance.h  cluster_mppi.h  collision_checker.h  log_mppi.h  mppi.h  mppi_param.h  smooth_mppi.h  visualize.h
src/: bi_mppi.cpp  cluster_mppi.cpp  glob.cpp  global.cpp  log_mppi.cpp  main.cpp  mppi.cpp
src/quadrotor/: bi_mppi.cpp  cluster_mppi.cpp  log_mppi.cpp  mppi.cpp
src/wmrobot/: bi_mppi.cpp  cluster_mppi.cpp
